--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Michał Łuszczek
+title: Michał Łuszczek's portfolio
 theme: jekyll-remote-theme
